# Aiogram-bot-template

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 3403d3b7e1c4_initial_migration.py
assets/: assets.py
bot/filters/: role.py
bot/handlers/: __init__.py  start.py
bot/handlers/admin/: __init__.py
bot/handlers/superadmin/: __init__.py
bot/handlers/user/: __init__.py
bot/keyboards/: pagination.py
bot/middlewares/: sessions.py
bot/services/: users.py
database/: exceptions.py  main.py
database/methods/: create.py  delete.py  get.py  update.py
database/models/: __init__.py  base.py  enums.py  user.py
database/queries/: user.py
database/repositories/: user.py
database/schemas/: user.py
